# surface-stac-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
R/: base_vars.R  root_catalog.R  stac_utils.R
catalog_manager/: catalog_extents.py  catalog_loader.py  catalog_manager.py  collection_manager.py  constants.py  item_manager.py  main.py  stac_metadata.py
config/: settings.py
examples/: base_use.py  catalog_manager_usage.py  get_or_create_catalog.py  stac_manager_usage.py
py/: build_stac_catalog.py  constants.py
stac_builder/: build_stac_catalog.py  constants.py  stac_asset.py  stac_catalog.py  stac_from_file.py  stac_metadata.py  stac_start.py  stac_utils.py
stac_manager/: __init__.py  catalog_extents.py  catalog_loader.py  catalog_manager.py  collection_manager.py  constants.py  data_models.py  item_manager.py  stac_manager.py  stac_metadata.py  url_converters.py
tests/: test_catalog_manager.py  test_item_manager.py  test_metadata_extractor.py
tools/: update_dependencies.py
