[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "stac_manager"
authors = [
  {name = "Angus Watters", email = "anguswatters@gmail.com"},
]
version = "0.0.46"
description = "Utilities for initiliazing and managing a STAC catalog"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
keywords = [ "STAC", "data-catalogs", "spatial"]
license = {text = "MIT License"}
dependencies = [
  "affine==2.4.0",
  "attrs==24.3.0",
  "certifi==2024.12.14",
  "click==8.1.8",
  "click-plugins==1.1.1",
  "cligj==0.7.2",
  "jmespath==1.0.1",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "numpy==2.2.1",
  "pyparsing==3.2.1",
  "pystac==1.11.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.1",
  "rasterio==1.4.3",
  "referencing==0.36.1",
  "rio-stac==0.10.1",
  "rpds-py==0.22.3",
  "s3transfer==0.11.1",
  "shapely==2.0.6",
  "six==1.17.0",
  "typing_extensions==4.12.2",
  "urllib3==2.3.0"
]
requires-python = ">=3.7"
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest",
  "pip-tools"
]
dev = ["black"]

[tool.setuptools]
packages = ["stac_manager"]

[tool.setuptools.dynamic]
version = {attr = "stac_manager.__version__"}